--- a/views/loginfail.ejs
+++ b/views/loginfail.ejs
@@ -3,7 +3,8 @@
   <h1>
       <%= username %>
   </h1>
-  <h3>And register, click <a href="/register">here</a></h3>
+  <a href="/login">Sign-in</a>
+  <h3>Or to register, click <a href="/register">here</a></h3>
   <br>
 </div>
 <%- include('footer'); -%>
