--- a/views/clients_user.ejs
+++ b/views/clients_user.ejs
@@ -48,12 +48,21 @@
             </tbody>
         </table>
     </div>
-    <div class='content'>
-        <H1 ID="welcome">WELCOME to Webstore</H1>
-    </div>
-    <div id="foot">
-        <p>Copyright &copy; (2021) - H W U</p>
-    </div>
+<div class="content">
+  ID Number: <%= num %> <br>
+  Username: <%= username %> <br>
+  Society: <%= society %> <br>
+  Contact: <%= contact %> <br>
+  Address: <%= addres %> <br>
+  Zip Code: <%= zipcode %> <br>
+  City: <%= city %> <br>
+  Phone: <%= phone %> <br>
+  Fax: <%= fax %><br>
+  Max Outstanding: <%= max %> <br>
+</div>
+<div id="foot">
+    <p>Copyright &copy; (2021) - H W U</p>
+</div>
 </body>
 
 </html>
