--- a/views/contacts.ejs
+++ b/views/contacts.ejs
@@ -1,8 +1,24 @@
 <%- include('header'); -%>
 <div class="content">
-    <h1>Name</h1>
-    <h1>Address</h1>
-    <h1> Phone</h1>
-    <h1>Email</h1>
+    <table id="catalog">
+        <tr>
+            <th>Name</th>
+            <th>Address</th>
+            <th>Phone</th>
+            <th>Email</th>
+        </tr>
+        <tr>
+            <th>Kanaga</th>
+            <th>Dubai</th>
+            <th>05612345</th>
+            <th>kn@hw.ac.uk</th>
+        </tr>
+        <tr>
+            <th>Hana</th>
+            <th>AbuDhabi</th>
+            <th>05662345</th>
+            <th>hsk@hw.ac.uk</th>
+        </tr>
+    </table>
 </div>
 <%- include('footer'); -%>
